--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Jun 15 14:18:47 CST 2022
+#Thu Jun 16 22:33:43 CST 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -8,7 +8,7 @@ enable-command-block=false
 enable-query=false
 generator-settings=
 level-name=world
-motd=A Minecraft Server
+motd=ChaChaServer-CCS.A new Redstone Industrial server
 query.port=25565
 pvp=true
 generate-structures=true
@@ -48,5 +48,5 @@ text-filtering-config=
 spawn-monsters=true
 enforce-whitelist=false
 resource-pack-sha1=
-spawn-protection=16
+spawn-protection=0
 max-world-size=29999984
