--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Jun 17 10:35:25 CST 2022
+#Sat Jun 18 20:30:53 CST 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -8,18 +8,18 @@ enable-command-block=true
 enable-query=false
 generator-settings=
 level-name=world
-motd=ChaChaServer-CCS.A new Redstone Industrial server
+motd=ChaChaServer-CCS. A new Redstone Industrial server
 query.port=25565
 pvp=true
 generate-structures=true
 difficulty=hard
 network-compression-threshold=256
 max-tick-time=60000
-use-native-transport=true
 max-players=20
+use-native-transport=true
 online-mode=false
 enable-status=true
-allow-flight=false
+allow-flight=true
 broadcast-rcon-to-ops=true
 view-distance=10
 max-build-height=256
